--- a/documentation/kit-lifecycle.mdx
+++ b/documentation/kit-lifecycle.mdx
@@ -543,9 +543,9 @@ KIT deprecation is a structured process for phasing out KITs that are no longer 
 
 ```mermaid
 graph LR
-    A[Active KIT] --> B[Announcement<br/>0]
-    B --> C[Transition Period<br/>2 Releases]
-    C --> D[End of Life<br/>4 Releases]
+    A[Active KIT] --> B[Announcement]
+    B --> C[Transition Period]
+    C --> D[End of Life]
     D --> E[Archived]
 
 ```
