--- a/documentation/kit-framework.mdx
+++ b/documentation/kit-framework.mdx
@@ -23,21 +23,168 @@ title: KIT Framework
  }
 
 import { KitStructureTable } from '@site/src/components/2.0/KitComponents';
+import KitArchitectureDiagram from '@site/src/components/2.0/KitArchitectureDiagram';
+import KitCategoryCard from '@site/src/components/2.0/KitCategoryCard';
+import KitVersionComparison from '@site/src/components/2.0/KitVersionComparison';
+import KitBenefits from '@site/src/components/2.0/KitBenefits';
+import VpnLockIcon from '@mui/icons-material/VpnLock';
+import FoundationIcon from '@mui/icons-material/Foundation';
+import PublicIcon from '@mui/icons-material/Public';
+import PrecisionManufacturingIcon from '@mui/icons-material/PrecisionManufacturing';
+import Button from '@mui/material/Button';
+import RocketLaunchIcon from '@mui/icons-material/RocketLaunch';
+import AllInclusiveIcon from '@mui/icons-material/AllInclusive';
 
 | Status     | Created      | Post-History                           |
 |------------|--------------|----------------------------------------|
 | Draft      | 04-Apr-2024  | Initial contribution                   |
-| Active     | 07-Nov-2025  | Added Dataspace Extensions section and Structure     |
+| Active     | 07-Nov-2025  | Added Industry Extensions, KIT 2.0 Architecture and Structure     |
 
-This explains each artifact a KIT can or must follow - depending on the graduation stage [TRG 9.01](/docs/release/trg-0/trg-9-01). An artifact is textual content or a technical component that is part of a KIT (e.g. a Vision statement).
+In this documentation you will find a comprehensive overview of the KIT framework, including its architecture, content structure, and the various artifacts that make up a KIT. Whether you are a developer looking to implement a KIT, an operator seeking deployment guidance, or a business stakeholder interested in understanding the value proposition of a KIT, this documentation provides the necessary insights and resources to get started.
 
-## The KIT Framework & Structure
+## What is a KIT?
+
+**KIT**, short for **Keep It Together**, is an open-source toolbox with comprehensive documentation that enables multiple stakeholders **(Business, Solution Providers, Developers)** to build interoperable applications compatible with the Eclipse Tractus-X dataspace technologies, and support the compliance with industrial standards from standarization organizations (Catena-X e.V., IDTA, ISO/DIN, EDWG, Manufacturing-X, etc.) and in some cases enable regulatory compliance.
+
+A KIT provides everything needed to implement and deploy specific business scenarios within a dataspace environment - from architectural guidance and API specifications to reference implementations and operational procedures. Each KIT serves as a complete, self-contained package that enables developers, operators, and business stakeholders to understand, build, and run solutions that are interoperable across the dataspace network.
+
+The KIT framework, allows different stakeholders to easily find relevant information and resources tailored to their specific needs, whether they are looking for high-level overviews, technical details, or operational guidelines.
+
+By following the KIT structure, organizations can ensure that their solutions align with the broader goals of Eclipse Tractus-X, promoting:
+
+<KitBenefits />
+
+## KIT Evolution: 1.0 to 2.0
+
+The KIT framework has evolved significantly to support the growing needs of multiple dataspaces and industries:
+
+<KitVersionComparison />
+
+The transition from KIT 1.0 to KIT 2.0 represents a fundamental shift in how we approach dataspace interoperability. While KIT 1.0 served the Catena-X automotive dataspace well, KIT 2.0 embraces a broader vision - enabling multiple industries to leverage the same foundational technologies while maintaining the flexibility to address industry-specific requirements through modular extensions.
+
+This evolution ensures that core dataspace capabilities remain consistent and interoperable, while allowing each industry to build specialized solutions on top of a shared foundation.
+
+<div style={{
+  display: 'flex',
+  justifyContent: 'center',
+  alignItems: 'center',
+  margin: '3rem 0',
+}}>
+  <Button
+    variant="contained"
+    endIcon={<RocketLaunchIcon />}
+    href="/documentation/kit-getting-started"
+    sx={{
+      display: 'flex',
+      alignItems: 'center',
+      justifyContent: 'center',
+      background: 'linear-gradient(135deg, var(--ifm-color-primary) 0%, #0096c7 100%)',
+      color: 'white',
+      padding: '16px 48px',
+      fontSize: '1.1rem',
+      fontWeight: 700,
+      textTransform: 'none',
+      borderRadius: '50px',
+      boxShadow: '0 8px 24px rgba(0, 184, 217, 0.35)',
+      border: '2px solid transparent',
+      position: 'relative',
+      overflow: 'hidden',
+      lineHeight: 1,
+      '&::before': {
+        content: '""',
+        position: 'absolute',
+        top: 0,
+        left: '-100%',
+        width: '100%',
+        height: '100%',
+        background: 'linear-gradient(90deg, transparent, rgba(255,255,255,0.3), transparent)',
+        transition: 'left 0.5s ease',
+      },
+      '&:hover': {
+        background: 'linear-gradient(135deg, #0096c7 0%, var(--ifm-color-primary) 100%)',
+        boxShadow: '0 12px 32px rgba(0, 184, 217, 0.5)',
+        transform: 'translateY(-4px) scale(1.02)',
+        border: '2px solid rgba(255, 255, 255, 0.3)',
+      },
+      '&:hover::before': {
+        left: '100%',
+      },
+      transition: 'all 0.4s cubic-bezier(0.4, 0, 0.2, 1)',
+    }}
+  >
+    Support us on the KIT 2.0 Evolution
+  </Button>
+</div>
+
+## KIT Framework Architecture
+
+KITs in Eclipse Tractus-X are organized into four main categories, each serving a specific purpose in the dataspace ecosystem:
+
+<KitArchitectureDiagram />
+
+### Dataspace Foundation
+
+<KitCategoryCard 
+  icon={VpnLockIcon}
+  title="Dataspace Foundation"
+  description="Essential KITs that provide the core infrastructure and foundational capabilities required for any dataspace."
+  highlight='Exchange "bytes" using dataspace technology in a secure and sovereign manner.'
+  examples={['Connector KIT', 'Data Trust & Security KIT', 'Data Governance KIT']}
+  color="primary"
+/>
+
+### Industry Core Foundation
+
+<KitCategoryCard 
+  icon={FoundationIcon}
+  title="Industry Core Foundation"
+  description="The Industry Core Foundation category contains KITs that provide common capabilities and standards shared across all use cases within any industry. These KITs define the core data models, digital twin concepts, and cross-functional services that multiple use cases depend upon, allowing use cases to be built in the future, keeping the interoperability and a common ground"
+  highlight="Foundation for building multiple use cases, fostering interoperability, data consistency and reusability across different use cases."
+  examples={['Industry Core KIT', 'Digital Twin KIT']}
+  color="secondary"
+/>
+
+
+### Cross-Industry Use Cases
+
+<KitCategoryCard 
+  icon={AllInclusiveIcon}
+  title="Cross-Industry Use Cases"
+  description="The Cross-Industry Use Cases category includes KITs that address specific business scenarios and challenges applicable across multiple industries or the entire dataspace. These KITs solve concrete business problems related to sustainability, quality, supply chain management, and other horizontal concerns that span industry boundaries."
+  highlight="Solve common business & regulatory problems across sectors"
+  examples={['PCF KIT', 'Eco Pass KIT', 'ESS KIT']}
+  color="tertiary"
+/>
+
+### Industry-Specific Use Cases
+
+<KitCategoryCard 
+  icon={PrecisionManufacturingIcon}
+  title="Industry-Specific Use Cases"
+  description="The Industry-Specific Use Cases category contains KITs tailored to address unique challenges and requirements of particular industries or vertical domains. These KITs provide specialized functionality that may only be relevant within a specific industry context, such as shop floor operations or sector-specific regulatory requirements."
+  highlight="Specialized solutions for specific industries, with flexibility and the future proofed interoperability"
+  examples={['Manufacturing as a Service KIT', 'Modular Production KIT']}
+  color="quaternary"
+/>
+
+## The KIT Content Structure
 
 KITs are structured around different views, each targeting specific stakeholders with relevant content:
+:::info Generic Requirements for All KITs
+In addition to the view-specific content below, every KIT must include:
+- **Copyright Notice** - Mandatory CC-BY-4.0 licensing information and contributor copyright statements at every file
+- **Changelog** - Version history file following [semantic versioning](https://semver.org/)
 
+The views below are organized in "folders" so that its sections are harmonized and the content from each view remains flexible.
+:::
 <KitStructureTable />
 
-## COPYRIGHT NOTICE
+:::tip
+Click on any row to navigate to the corresponding view documentation section below.
+:::
+
+
+### Copyright Notice
 
 Mandatory for every KIT, It **MUST** be included in every file (not just on the adoption view!).
 KIT documentation works under the CC-BY-4.0 license. Therefore you need to add the "notice" part to make transparent which companies worked on this KIT.
@@ -80,12 +227,12 @@ This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses
 - Source URL: [Source Code](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/)
 ```
 
-## CHANGELOG
+### Changelog
 
 To achieve uniformity, we use [semantic versioning](https://semver.org/). Concrete examples in our already published [KITs](https://eclipse-tractusx.github.io/Kits).
 For a KIT we distinguish between three phases sandbox, incubating and graduated.
 
-## Adoption View
+### Adoption View
 
 The adoption view gives a general introduction to the KIT. It aims to provide insights to industry problems, the KIT is addressing.
 Mandatory for every KIT and all graduation stages
@@ -99,19 +246,19 @@ Starting with the **vision of the KIT** (one or two catching phrases)
 `Example from BPDM:`
 Unique business partner data sets for the whole data space. Basis for integration value-adding services in the area of business partner data management.
 
-### The missions of the KIT
+#### The missions of the KIT
 
 Mandatory for every KIT and all graduation stages
 The mission explains why we are providing the KIT describing a concrete industry problem.
-`Example from BPDM:` “The KIT provides a homogenous semantic with an open data model, high data quality and one access point to the business partner data sets.”
+`Example from BPDM:` "The KIT provides a homogenous semantic with an open data model, high data quality and one access point to the business partner data sets."
 
-#### Giving more context with explaining the connection to the use case
+##### Giving more context with explaining the connection to the use case
 
 `Example from BPDM:`
 The BusinessPartner KIT provides high-quality data records of business partners called golden record, including a unique identifier, the business partner number (BPN).
 …
 
-### Business Value
+#### Business Value
 
 Mandatory for every KIT that is related to a use case and all graduation stages
 The business value describes the benefits for an service provider by using a KIT in order to create a commercial or non-profit solution for the Catena-X marketplaces.
@@ -122,7 +269,7 @@ One open data model: Application and Service provider can reduce investments to 
 Access to new market potentials: Potential to scale customer group and access new market potentials via Catena-X marketplace and shared service network. The BP KIT enables an interoperable foundation for value-added services.
 The unique identifier: BPN is the unique number to identify and find partners in the Catena-X network. It will also provide high quality data sets from business partners, their legal unit, sites and addresses.
 
-### Use Case / Domain explanation
+#### Use Case / Domain explanation
 
 Mandatory for every KIT that is related to a use case and all graduation stages
 This gives more insights into the use case or domain itself.
@@ -147,7 +294,7 @@ Solution Provider:
 - The KIT enables the offering of value-add services and innovation based on golden record and collective wisdom.
 - Potential to scale customer group and access new market potentials via marketplace and shared service network.
 
-### Tutorials
+#### Tutorials
 
 Mandatory for the 'Graduated' stage. Optional for 'sandbox' and 'incubating'
 A tutorial provides educational resources that provides step-by-step guidance on how to use a KIT. Tutorials can be delivered in various formats, such as videos or written text. It may also provide additional resources for further exploration of the topic.
@@ -156,7 +303,7 @@ Deliverables:
 - Description
 - Tutorial video or screenshot documentation
 
-### Whitepaper
+#### Whitepaper
 
 Optional
 A whitepaper outlines the overall objectives of a KIT regarding a specific business problem. It provides readers with background information on the topic, identifies key challenges and solutions to those challenges, evaluates alternative approaches to solving the business problem at hand, and offers recommendations for action.
@@ -165,7 +312,7 @@ Deliverable:
 - Description
 - Link to the whitepaper
 
-### Standards
+#### Standards
 
 Optional but highly recommended
 Standards are essential for ensuring interoperability and consistency across different implementations of a KIT. By adhering to established standards, KITs can facilitate seamless integration and communication between various systems and stakeholders within the ecosystem.
@@ -179,10 +326,10 @@ Example:
 | **Standard Name** | 1.0     | [Link to Standard](https://example.com) |
 
 :::warning
-If there is a dataspace specific standard, please include it on the Dataspace Extensions Tab of from your Dataspace.
+If there is an industry specific standard, please include it on the Industry Extensions Tab for your industry.
 :::
 
-### Semantic Models
+#### Semantic Models
 
 Mandatory for every KIT that is related to a use case + for the 'incubating' stage
 The semantic data models are a method of structuring data that includes semantic information that adds a basic meaning to the data and the relationships that lie between them to enable interoperability.
@@ -194,16 +341,16 @@ Deliverables:
 [Traceability Semantic Models](https://eclipse-tractusx.github.io/docs-kits/kits/traceability-kit/adoption-view#semantic-models)
 
 :::warning
-If there is a dataspace specific semantic model, please include it on the Dataspace Extensions Tab of from your Dataspace.
+If there is an industry specific semantic model, please include it on the Industry Extensions Tab for your industry.
 :::
 
-### Logic / Schema
+#### Logic / Schema
 
 Mandatory for every KIT that is related to a use case + for the 'incubating' stage
 Logic / schemas provides a definition of the minimum viable business process that must be implemented to enable interoperability.
 Deliverables: Description
 
-### Business Process
+#### Business Process
 
 Mandatory for every KIT that is related to a use case + for the 'incubating' stage
 Data sovereignty is one of the main principles of Eclipse Tractus-X and a major topic for the participants in the data space. This part should help to understand how the business process works and provides a blue print on how access & usage policies **could** look like.
@@ -212,16 +359,16 @@ Data sovereignty is one of the main principles of Eclipse Tractus-X and a major 
 - Access & Usage Policies
 
 
-## Development View
+### Development View
 
 The development view provides developers with resources to accelerate the development of apps and services.
 
-### Architecture Overview
+#### Architecture Overview
 
 The architecture view is an optional chapter. It offers an architecture perspective including the main building blocks and the runtime view. It can be extended with more architecture documentation like an ARC42.
 [`Example for an Architecture View/Overview:`](https://eclipse-tractusx.github.io/docs-kits/kits/data-trust-and-security-kit/software-development-view/overview).
 
-### API Specifications
+#### API Specifications
 
 Mandatory for every KIT that wants to go to the 'incubating' stage
 Deliverables:
@@ -233,21 +380,21 @@ Deliverables:
 `Example from DataChain KIT:` The API of the Item Relationship Service (IRS) for retrieving item graphs along the value chain of Eclipse Tractus-X partners.
 [`Example for OpenAPI integration:`](/docs-kits/kits/business-partner-kit/software-development-view)
 
-### Sample Data
+#### Sample Data
 
 Deliverable:
 
 - Description on how to use the sample data
 - File with sample data
 
-### Reference Implementation
+#### Reference Implementation
 
 Deliverable:
 
 - Description
 - Link to repository
 
-### Documentation in the context of development
+#### Documentation in the context of development
 
 Deliverable:
 
@@ -255,7 +402,7 @@ Deliverable:
 - Usage examples
 - More explanation on how to use the API in different scenarios
 
-## Operations View
+### Operations View
 
 ... provides resources to deploy and operate centralized & decentralized Eclipse Tractus-X offerings in your IT environment (e.g., on-prem, cloud).
 Deliverables:
@@ -266,11 +413,11 @@ Deliverables:
 - Deployment
   **Deployment Scripts**
 
-## Documentation
+### Documentation
 
 The Documentation view provides extra documentation and links that may be relevant for any stakeholder. This section serves as a central repository for additional resources that don't fit into the specific views above but are valuable for understanding or working with the KIT.
 
-### Purpose
+#### Purpose
 
 This view is designed to be flexible and accommodate various types of supplementary information that stakeholders might need, including:
 
@@ -283,7 +430,7 @@ This view is designed to be flexible and accommodate various types of supplement
 - Related standards and specifications hosted elsewhere
 - Training materials and certification programs
 
-### Deliverables
+#### Deliverables
 
 **Additional Resources:**
 
@@ -294,7 +441,7 @@ This view is designed to be flexible and accommodate various types of supplement
 - **Publications**: Research papers, blog posts, or articles
 - **Training Materials**: Courses, workshops, or certification programs
 
-### Examples
+#### Examples
 
 - In [Data Trust & Security KIT](/docs-kits/kits/data-trust-and-security-kit/documentation/rulebook-template) the documentation section is used to reference a rulebook template.
 
@@ -319,13 +466,13 @@ This view is designed to be flexible and accommodate various types of supplement
 You can update that in ['/sidebarsDocsKits.js'](../sidebarsDocsKits.js) file at the root folder.
 
 
-## Dataspace Extensions
+### Industry Extensions
 
-The Dataspace Extensions view represents a specialized extension mechanism that allows KITs to be adapted and customized for specific dataspace implementations while maintaining their core structure and functionality. This approach ensures interoperability across different dataspaces while allowing for dataspace-specific requirements, policies, and standards.
+The Industry Extensions view represents a specialized extension mechanism that allows KITs to be adapted and customized for specific industry implementations while maintaining their core structure and functionality. This approach ensures interoperability across different industries while allowing for industry-specific requirements, policies, and standards.
 
-### Folder Structure
+#### Folder Structure
 
-The dataspace extensions are organized in a clear folder structure within each KIT:
+The industry extensions are organized in a clear folder structure within each KIT:
 
 ```
 docs-kits/kits/your-kit/
@@ -333,48 +480,48 @@ docs-kits/kits/your-kit/
 ├── development-view/
 ├── operations-view/
 ├── documentation/
-└── dataspace-extensions/
-    ├── catena-x/
+└── industry-extensions/
+    ├── automotive/
     │   ├── standards.md
     │   ├── policies.md
     │   └── semantic-models.md
-    ├── factory-x/
+    ├── shop-floor/
     │   ├── standards.md
     │   └── policies.md
-    └── semiconductor-x/
+    └── semiconductor/
         └── standards.md
 ```
 
-Each dataspace folder contains only the specific extensions relevant to that dataspace, allowing for flexible and modular customization.
+Each industry folder contains only the specific extensions relevant to that industry, allowing for flexible and modular customization.
 
-### Purpose and Scope
+#### Purpose and Scope
 
-Dataspace Extensions enable KITs to support multiple dataspace ecosystems (such as Catena-X, Factory-X, Semiconductor-X, etc.) without duplicating the core KIT content. Each dataspace extension contains:
+Industry Extensions enable KITs to support multiple industry verticals (such as Automotive, Shop Floor, Semiconductor, etc.) without duplicating the core KIT content. Each industry extension contains:
 
-- **Dataspace-specific policies** that govern data usage and access within that particular ecosystem
+- **Industry-specific policies** that govern data usage and access within that particular industry
 - **Custom semantic models** tailored to the specific industry or domain requirements
-- **Dataspace standards** that may differ from generic implementations
+- **Industry standards** that may differ from generic implementations
 - **Compliance requirements** specific to regulatory or industry standards
 
-### Standards
+#### Standards
 
 Mandatory for every KIT that wants to go to the 'incubating' stage
 Links to the relevant standards (Association Library). Add the relevant number of the standard, the name and version of the standard.
-The dataspace specific standards should be added in this section and are hosted in the dataspace's standard library. 
+The industry specific standards should be added in this section and are hosted in the industry's standard library. 
 Normally it includes a table and a header similiar to this ones in the example.
 
 Example:
 
-#### Catena-X Standards
+##### Automotive Industry Standards
 
 | ID | Name | Link |
 | -- | ---- | ---- |
 | CX-0002 | Digital Twins in Catena-X v2.2.0 | [go to standard](https://catenax-ev.github.io/docs/next/standards/CX-0002-DigitalTwinsInCatenaX) |
 
 
-### Structure and Implementation
+#### Structure and Implementation
 
-The following diagram illustrates how generic KIT components relate to dataspace-specific extensions:
+The following diagram illustrates how generic KIT components relate to industry-specific extensions:
 
 ```mermaid
 flowchart TD
@@ -386,26 +533,26 @@ flowchart TD
         DOC["  DOCUMENTATION  "]
     end
     
-    subgraph DSE["   DATASPACE EXTENSIONS   "]
-        subgraph CX["   CATENA-X   "]
-            CX_POL["  POLICIES IN CATENA-X  "]
-            CX_DM["  DATA MODEL  "]
-            CX_STD["  STANDARDS  "]
+    subgraph IE["   INDUSTRY EXTENSIONS   "]
+        subgraph AUTO["   AUTOMOTIVE   "]
+            AUTO_POL["  POLICIES  "]
+            AUTO_DM["  DATA MODEL  "]
+            AUTO_STD["  STANDARDS  "]
         end
         
-        subgraph FX["   FACTORY-X   "]
-            FX_POL["  POLICIES IN FACTORY-X  "]
-            FX_DM["  DATA MODEL  "]
+        subgraph SF["   SHOP FLOOR   "]
+            SF_POL["  POLICIES  "]
+            SF_DM["  DATA MODEL  "]
         end
         
-        subgraph SX["   SEMICONDUCTOR-X   "]
-            SX_POL["  POLICIES IN SEMI  "]
-            SX_STD["  STANDARDS  "]
+        subgraph SEMI["   SEMICONDUCTOR   "]
+            SEMI_POL["  POLICIES  "]
+            SEMI_STD["  STANDARDS  "]
         end
     end
     
-    Generic --> DSE
+    Generic --> IE
     
 ```
 
-This modular approach enables KITs to serve as universal building blocks that can be specialized for different dataspace ecosystems while maintaining their core value proposition and functionality.
+This modular approach enables KITs to serve as universal building blocks that can be specialized for different industry verticals while maintaining their core value proposition and functionality.
